# finternet-api

./: Cargo.toml  LICENSE  README.md
asset-scheme/: asset.pkl
asset-scheme/json-ld/: ledger.ld.json  policy.ld.json
asset-scheme/json-ld/assets/: core_asset.ld.json
asset-scheme/json-ld/assets/finance/: core_money.ld.json
asset-scheme/json-ld/examples/: example_1.ld.json
asset-scheme/typescript/: types.jsonld
config/: development.toml
docs/: openapi-spec.yaml
docs/asset-scheme/json-ld/: entity.ld.json  ledger_policy.ld.json  role.ld.json
docs/asset-scheme/json-ld/assets/finance/: bank_money.ld.json
docs/asset-scheme/typescript/: types.rs  types.ts  types2.jsonld
docs/runtime-primitives/: asset-runtime-schema-functions.md  core.md  example-workflows.md  linux-syscall-lifecycles.md  low-level-interface.md
docs/runtime-primitives/hamburg/: NOTES.md
docs/runtime-primitives/inode-route/: asset-repr.md  inode-primitive.md
postman-collection/: Finternet.postman_collection.json
samples/: create_account.sh  create_user.sh  create_user2.sh
src/: app.rs  config.rs  error.rs  imc.rs  lib.rs  logging.rs  main.rs  state.rs  storage.rs
src/app/: token_managers.rs  users.rs
src/app/token_managers/: supported_assets.rs  types.rs
src/app/token_managers/supported_assets/: types.rs
src/app/users/: accounts.rs  assets.rs  types.rs
src/app/users/accounts/: assets.rs  types.rs
src/app/users/accounts/assets/: external.rs  types.rs
src/app/users/assets/: types.rs
src/imc/: storage_impl.rs
src/storage/: types.rs
