[package]
name = "finternet-app-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
axum = "0.7.5"
thiserror = "1.0.61"
error-stack = "0.4.1"

serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
config = "0.14.0"
serde_path_to_error = "0.1.16"
strum = { version = "0.26.2", features = ["derive"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = true, features = [
  "env-filter",
  "json",
  "registry",
] }
tracing-appender = "0.2.3"
async-trait = "0.1.80"
bincode = "1.3.3"
dyn-clone = "1.0.17"


[build-dependencies]
cargo_metadata = "0.18.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"
